fix bage visible

--- a/src/sass/_cooperation.scss
+++ b/src/sass/_cooperation.scss
@@ -9,20 +9,20 @@
   align-items: end;
   justify-content: end;
   position: relative;
-  overflow: hidden;
-    @media screen and (max-width: 767px) {
-      height: auto;
-      padding: 35px 0 35px;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      // overflow: hidden;
-      > span {
-        margin-left: 15px;
-        margin-right: auto;
-      }
+  // overflow: hidden;
+  @media screen and (max-width: 767px) {
+    height: auto;
+    padding: 35px 0 35px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    // overflow: hidden;
+    > span {
+      margin-left: 15px;
+      margin-right: auto;
     }
+  }
 }
 
 .coop-title {
@@ -78,6 +78,7 @@
     // align-items: center;
     // border: 1px solid red;
   }
+  z-index: -1;
   width: 480px;
   height: 1440px;
   margin-bottom: -13px;
