--- a/src/sass/_visits.scss
+++ b/src/sass/_visits.scss
@@ -4,6 +4,7 @@
     height: auto;
     gap: 35px;
     margin: 0;
+    z-index: 3333;
   }
   width: 1920px;
   margin-top: 75px;
